# meshtassy

./: .gitignore
meshtassy-telemetry/: Cargo.toml
meshtassy-telemetry/src/: environmental_telemetry.rs  lib.rs
meshtassy-telemetry/src/sensors/: bme.rs  mod.rs  scd30.rs  sht4x.rs
nrf/: Cargo.toml  build.rs
nrf/.cargo/: config.toml
nrf/src/: environmental_telemetry.rs  main.rs  packet_relay.rs
nrf/src/boards/: mod.rs  seeed_xiao_nrf52840.rs  wisblock_rak4631.rs
nrf/src/sensors/: bme.rs  mod.rs  scd30.rs
rp/: Cargo.toml
rp/src/: environmental_telemetry.rs  main.rs
rp/src/boards/: mod.rs  raspberry_pi_pico.rs  template.rs
